# lpro_challenge

lpro_backend/: .gitignore  README.md  env.example  manage.py  pyproject.toml  zappa_settings.json
lpro_backend/api/: __init__.py  v1.py
lpro_backend/api/tests/: test_api.py
lpro_backend/calculator/: admin.py  exceptions.py  models.py  operations.py  schemas.py
lpro_backend/calculator/fixtures/: operations.json
lpro_backend/calculator/migrations/: 0001_initial.py
lpro_backend/calculator/tests/: test_operations.py
lpro_backend/core/: admin.py  models.py
lpro_backend/core/migrations/: 0001_initial.py
lpro_backend/core/tests/: test_models.py
lpro_backend/lpro_backend/: asgi.py  urls.py  wsgi.py
lpro_backend/lpro_backend/settings/: base.py  local.py  prod.py
