[tool.poetry]
name = "lpro-backend"
version = "0.1.0"
description = ""
authors = ["Ider Delzo <soloidx@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
django-environ = "^0.10.0"
django-ninja = "^0.21.0"
pydantic = {extras = ["email"], version = "^1.10.6"}
requests = "^2.28.2"
django-oauth-toolkit = "^2.2.0"
psycopg2-binary = "^2.9.5"
django-storages = "^1.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-django = "^4.5.2"
django-silk = "^5.0.3"
pytest-cov = "^4.0.0"
zappa = "^0.56.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lpro_backend.settings.local"
addopts = "--cov=. --cov-report term-missing:skip-covered --cov-fail-under 100"
